<resources>
    <string name="app_name">Github User App</string>
    <string name="txt_user_app">User App</string>
    <string name="tv_github_user">Github User</string>
    <string name="txt_username">Username</string>
    <string name="txt_location">Location</string>
    <string name="txt_company">Company:</string>
    <string name="icon_more_detail">Icon More Detail</string>
    <string name="image_avatar_user">User Avatar</string>
    <string name="search">Search</string>
    <string name="search_hint">Search username</string>
    <string name="txt_name">Name</string>
    <string name="tab_followers">FOLLOWERS</string>
    <string name="tab_following">FOLLOWING</string>
    <string name="settings">Settings</string>
    <string name="tv_welcome">LET\'S START LOOKING FOR\nGITHUB USER</string>
    <string name="image_search">Image Search</string>
    <string name="favorite">Favorite</string>
    <string name="github_mark">Github Mark</string>
    <string name="github_logo">Github Logo</string>
    <string name="connection_error">Connection Error</string>
    <string name="image_connection_error">Image Connection Error</string>
    <string name="tv_not_found">Not Found\nConnection Error</string>
    <string name="favorite_user">Favorite User</string>
    <string name="txt_delete_all">Delete All</string>
    <string name="txt_all_favorites_deleted">All Favorites Deleted</string>
    <string name="txt_favorite_deleted">Favorite Deleted</string>
    <string name="txt_favorite_saved">Favorite saved</string>
    <string name="key_reminder">reminder</string>
    <string name="txt_reminder">Reminder at 9.00 AM</string>
    <string name="key_language">language</string>
    <string name="txt_language">Select Language</string>
    <string name="txt_language_selected">English</string>
    <string name="title_reminder">Daily Reminder</string>
    <string name="daily_reminder_message">Let\'s find popular user on Github!</string>
    <string name="reminder_off">Reminder OFF</string>
    <string name="reminder_on">Reminder ON</string>
    <string name="appwidget_text">USER FAVORITES</string>
    <string name="add_widget">Add widget</string>
    <string name="icon_daily_reminder">Icon Daily Reminder</string>
    <string name="icon_select_language">Icon Select Language</string>
</resources>