<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/img_github_mark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/github_mark"
        android:src="@drawable/github_mark_light_120px" />

    <ImageView
        android:id="@+id/img_github_logo"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:contentDescription="@string/github_logo"
        android:src="@drawable/github_logo_white"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_github_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_github_logo"
        android:gravity="center"
        android:text="@string/txt_user_app"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout>