<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UserDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginBottom="100dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Username">

            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_avatar_user"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"
                tools:src="@drawable/user1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBlueTransparent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circle_avatar"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/rl1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:src="@drawable/user1" />

                <RelativeLayout
                    android:id="@+id/rl1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toTopOf="@+id/rl2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        tools:text="@string/txt_name" />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_name"
                        android:gravity="center"
                        android:textSize="20sp"
                        tools:text="@string/txt_location" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:id="@+id/company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/txt_company" />

                    <TextView
                        android:id="@+id/tv_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/company"
                        android:gravity="center"
                        android:textSize="20sp"
                        tools:text="BTech Industry" />
                </RelativeLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:menu="@menu/option_setting"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">

                <TextView
                    android:id="@+id/tv_toolbar"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_username" />
            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/tv_not_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tv_not_found"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:visibility="gone" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    tools:text="30000" />

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    tools:text="35000" />
            </TableRow>
        </TableLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            style="@style/Widget.MaterialComponents.TabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabIndicatorColor="@color/colorAccent"
            app:tabIndicatorFullWidth="true"
            app:tabTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorAccent"
        app:icon="@drawable/ic_baseline_favorite_border_24"
        app:iconSize="30dp"
        app:iconTint="@android:color/white"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|center" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>